# flow-match-story

./: .gitignore  pyproject.toml  sample.py  train.py
configs/: story-writer.yaml
src/: __init__.py  config.py  data.py
src/model/: __init__.py  transformer.py  util.py
